maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: 'while' expected but ')' found.
  )while(!estSurBiscuit)
  ^PledgeMaze:6: error: '(' expected but '}' found.
}
^