maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt =0
  do()
  )while(!estSurBiscuit)
}

def keepHandOnSideWall():Int={
  var dir = 0 
 	if(estFaceMur()){
    gauche()
    dir=dir+1
  }  
  if(estFaceMur()){
    gauche()
    dir=dir+1
  }
  if(estFaceMur()){
    gauche()
    dir=dir+1
  }
  avance()
  droite()
  dir=dir-1
  return dir
}

def isDirectionFree(dir:Direction): Boolean ={
  while(getDirection!=dir){
    droite()
  }
  if(estFaceMur){
    return false
  }
  else{
    return true
  }
}